# dl-mlops-pipeline

./: DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py
api/: .dockerignore  Dockerfile  main.py  model.py  requirements.txt  schemas.py  transformers.py
data/: Dataset-Link.md  datatest.txt  datatest2.txt  datatraining.txt
models/: occupancy_model_pipeline.joblib
notebooks/: 215565L_ML_project_notebook copy.ipynb  215565L_ML_project_notebook.ipynb  model-training.ipynb
