[project]
name = "dl-mlops-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Ravindu Weerasinghe",email = "ravindutharuka2001@gmail.com"}
]
readme = "README.md"
requires-python = "<3.15,>=3.13"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
